--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,23 @@ a {
     padding: 0 2rem; */
   }
 }
+
+
+ol {
+  padding-left: 1.5em;
+  margin-bottom: 1em;
+  list-style-position: inside;
+}
+
+ol li {
+  margin-bottom: 0.5em;
+  line-height: 1.7;
+  padding-left: 0.2em;
+}
+
+li {
+  line-height: 1.7;
+  margin-left: 1em;
+  margin-bottom: 0.3em;
+}
+
